--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>ThatNerdNoah</h1>
-    <h2><link rel="stylesheet" href="https://bsky.thatnerdnoah.com">Bluesky</h2>
+    <a href="https://bsky.thatnerdnoah.com"><h3>Bluesky</h3></a>
 </body>
 </html>
